--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "eslint-plugin-react": "^7.31.8",
     "husky": "^8.0.1",
     "prettier": "^2.7.1",
+    "sass": "^1.55.0",
     "typescript": "4.8.3"
   }
 }
