--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,16 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
-/node_modules
-/.pnp
+**/node_modules/**
+.pnp
 .pnp.js
+**/.yarn/**
 
 # testing
-/coverage
+coverage
 
 # next.js
-/.next/
+**/.next/**
 /out/
 
 # production
