--- a/package.json
+++ b/package.json
@@ -1,37 +1,13 @@
 {
   "name": "one-bit-swap",
-  "version": "0.1.0",
+  "version": "1.0.0",
+  "description": "Monorepo del proyecto de graduación titulado \"Plataforma Decentralizada para Intercambio de Criptomonedas\" para acceder al título de Ingenieros en Computación",
+  "main": "index.js",
+  "author": "Campero, L. - Roman, J. E. - Sas, E. J.",
+  "license": "MIT",
   "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "@emotion/react": "^11.10.4",
-    "@emotion/styled": "^11.10.4",
-    "@mui/icons-material": "^5.10.6",
-    "@mui/material": "^5.10.6",
-    "next": "12.3.1",
-    "react": "18.2.0",
-    "react-dom": "18.2.0"
-  },
-  "devDependencies": {
-    "@types/node": "18.7.21",
-    "@types/react": "18.0.21",
-    "@types/react-dom": "18.0.6",
-    "@typescript-eslint/eslint-plugin": "^5.38.0",
-    "@typescript-eslint/parser": "^5.38.0",
-    "eslint": "^8.24.0",
-    "eslint-config-next": "12.3.1",
-    "eslint-config-prettier": "^8.5.0",
-    "eslint-import-resolver-typescript": "^3.5.1",
-    "eslint-plugin-prettier": "^4.2.1",
-    "eslint-plugin-react": "^7.31.8",
-    "husky": "^8.0.1",
-    "prettier": "^2.7.1",
-    "sass": "^1.55.0",
-    "typescript": "4.8.3"
-  }
+  "workspaces": [
+    "client",
+    "contracts"
+  ]
 }
