--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -12,7 +12,7 @@
   "rules": {
     "no-unused-vars": "off",
     "@typescript-eslint/no-unused-vars": ["error", { "vars": "local" }],
-    "@typescript-eslint/no-explicit-any": "error",
+    "@typescript-eslint/no-explicit-any": "off",
     "prettier/prettier": "error"
   }
 }
