Establecer orden para miembros de clases + renombrar archivo de definiciones

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -13,6 +13,19 @@
     "no-unused-vars": "off",
     "@typescript-eslint/no-unused-vars": ["error", { "vars": "local" }],
     "@typescript-eslint/no-explicit-any": "off",
+    "@typescript-eslint/member-ordering": [
+      "error",
+      {
+        "default": [
+          "signature",
+          "field",
+          "static-initialization",
+          "constructor",
+          "method",
+          ["get", "set"]
+        ]
+      }
+    ],
     "prettier/prettier": "error"
   }
 }
