--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -5,5 +5,18 @@
   "tabWidth": 2,
   "useTabs": false,
   "printWidth": 80,
-  "jsxSingleQuote": false
+  "jsxSingleQuote": false,
+  "overrides": [
+    {
+      "files": "*.sol",
+      "options": {
+        "printWidth": 80,
+        "tabWidth": 2,
+        "useTabs": false,
+        "singleQuote": false,
+        "bracketSpacing": false,
+        "explicitTypes": "preserve"
+      }
+    }
+  ]
 }
