--- a/contracts/package.json
+++ b/contracts/package.json
@@ -11,13 +11,20 @@
     "help": "npx hardhat help",
     "test": "npx hardhat test",
     "node": "npx hardhat node",
-    "deploy:local": "npx hardhat run scripts/deploy.ts --network localhost"
+    "deploy:local": "npx hardhat run scripts/deploy.ts --network localhost",
+    "deploy:test": "npx hardhat run scripts/deploy.ts --network testnet",
+    "deploy:main": "npx hardhat run scripts/deploy.ts --network mainnet"
   },
   "devDependencies": {
+    "@nomicfoundation/hardhat-chai-matchers": "^1.0.4",
     "@nomicfoundation/hardhat-toolbox": "^2.0.0",
     "@nomiclabs/hardhat-ethers": "^2.2.0",
     "@openzeppelin/hardhat-upgrades": "^1.21.0",
     "ethers": "^5.7.1",
-    "hardhat": "^2.12.0"
+    "hardhat": "^2.12.0",
+    "ts-node": "^10.9.1"
+  },
+  "dependencies": {
+    "dotenv": "^16.0.3"
   }
 }
