--- a/contracts/package.json
+++ b/contracts/package.json
@@ -12,8 +12,10 @@
     "test": "npx hardhat test",
     "node": "npx hardhat node",
     "deploy:local": "npx hardhat run scripts/deploy.ts --network localhost",
-    "deploy:test": "npx hardhat run scripts/deploy.ts --network testnet",
-    "deploy:main": "npx hardhat run scripts/deploy.ts --network mainnet"
+    "deploy:test": "npx hardhat run scripts/deploy.ts --network polygonMumbai",
+    "deploy:main": "npx hardhat run scripts/deploy.ts --network polygon",
+    "verify:test": "npx hardhat run scripts/verify.ts --network polygonMumbai",
+    "verify:main": "npx hardhat run scripts/verify.ts --network polygon"
   },
   "devDependencies": {
     "@ethersproject/abi": "^5.7.0",
