Configuraciones de resaltado y formato para Solidity

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -4,6 +4,7 @@
     "esbenp.prettier-vscode",
     "dbaeumer.vscode-eslint",
     "editorconfig.editorconfig",
-    "vscodeshift.mui-snippets"
+    "vscodeshift.mui-snippets",
+    "NomicFoundation.hardhat-solidity"
   ]
 }
