--- a/contracts/.gitignore
+++ b/contracts/.gitignore
@@ -7,5 +7,7 @@ typechain-types
 
 #Hardhat files
 cache
-artifacts
+artifacts/build-info/**
+artifacts/hardhat/**
+artifacts/contracts/**/*.*.json
 
