Agregar librerías de OppenZeppelin y Chainlink para contratos

--- a/contracts/.gitignore
+++ b/contracts/.gitignore
@@ -8,6 +8,7 @@ typechain-types
 #Hardhat files
 cache
 artifacts/build-info/**
+artifacts/@openzeppelin/**
 artifacts/hardhat/**
 artifacts/contracts/**/*.*.json
 
