--- a/contracts/package.json
+++ b/contracts/package.json
@@ -40,6 +40,8 @@
     "typechain": "^8.1.0"
   },
   "dependencies": {
+    "@chainlink/contracts": "^0.5.1",
+    "@openzeppelin/contracts": "^4.7.3",
     "dotenv": "^16.0.3"
   }
 }
