Consulta de cotización con chainlink
- El buscador no está funcionando correctamente

--- a/contracts/.gitignore
+++ b/contracts/.gitignore
@@ -9,6 +9,7 @@ typechain-types
 cache
 artifacts/build-info/**
 artifacts/@openzeppelin/**
+artifacts/@chainlink/**
 artifacts/hardhat/**
 artifacts/contracts/**/*.*.json
 
