--- a/package.json
+++ b/package.json
@@ -1,13 +1,71 @@
 {
   "name": "one-bit-swap",
   "version": "1.0.0",
-  "description": "Monorepo del proyecto de graduación titulado \"Plataforma Decentralizada para Intercambio de Criptomonedas\" para acceder al título de Ingenieros en Computación",
+  "description": "Código fuende del proyecto de graduación titulado \"Plataforma Decentralizada para Intercambio de Criptomonedas\" para acceder al título de Ingenieros en Computación",
   "main": "index.js",
-  "author": "Campero, L. - Roman, J. E. - Sas, E. J.",
+  "repository": "https://github.com/leandrocampero/one-bit-swap",
+  "author": "Campero, L. (@leandrocampero) - Roman, J. E. (@serteban) - Sas, E. J. (@emirjs)",
   "license": "MIT",
-  "private": true,
-  "workspaces": [
-    "client",
-    "contracts"
-  ]
+  "scripts": {
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint",
+    "hardhat": "npx hardhat",
+    "compile": "npx hardhat compile",
+    "help": "npx hardhat help",
+    "test": "npx hardhat test",
+    "node": "npx hardhat node",
+    "deploy:local": "npx hardhat run scripts/deploy.ts --network localhost",
+    "deploy:test": "npx hardhat run scripts/deploy.ts --network polygonMumbai",
+    "deploy:main": "npx hardhat run scripts/deploy.ts --network polygon",
+    "verify:test": "npx hardhat run scripts/verify.ts --network polygonMumbai",
+    "verify:main": "npx hardhat run scripts/verify.ts --network polygon"
+  },
+  "devDependencies": {
+    "@ethersproject/abi": "^5.7.0",
+    "@ethersproject/providers": "^5.7.2",
+    "@nomicfoundation/hardhat-chai-matchers": "^1.0.4",
+    "@nomicfoundation/hardhat-network-helpers": "^1.0.6",
+    "@nomicfoundation/hardhat-toolbox": "^2.0.0",
+    "@nomiclabs/hardhat-ethers": "^2.2.0",
+    "@nomiclabs/hardhat-etherscan": "^3.1.1",
+    "@typechain/ethers-v5": "^10.1.0",
+    "@typechain/hardhat": "^6.1.3",
+    "@types/mocha": "^10.0.0",
+    "chai": "^4.3.6",
+    "ethers": "^5.7.2",
+    "hardhat": "^2.12.0",
+    "hardhat-gas-reporter": "^1.0.9",
+    "mocha": "^10.1.0",
+    "solidity-coverage": "^0.8.2",
+    "ts-node": "^10.9.1",
+    "typechain": "^8.1.0",
+    "@types/node": "18.7.21",
+    "@types/react": "18.0.21",
+    "@types/react-dom": "18.0.6",
+    "@typescript-eslint/eslint-plugin": "^5.38.0",
+    "@typescript-eslint/parser": "^5.38.0",
+    "eslint": "^8.24.0",
+    "eslint-config-next": "12.3.1",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-import-resolver-typescript": "^3.5.1",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-react": "^7.31.8",
+    "prettier": "^2.7.1",
+    "sass": "^1.55.0",
+    "typescript": "4.8.3"
+  },
+  "dependencies": {
+    "@chainlink/contracts": "^0.5.1",
+    "@openzeppelin/contracts": "^4.7.3",
+    "dotenv": "^16.0.3",
+    "@emotion/react": "^11.10.4",
+    "@emotion/styled": "^11.10.4",
+    "@mui/icons-material": "^5.10.6",
+    "@mui/material": "^5.10.6",
+    "next": "12.3.1",
+    "react": "18.2.0",
+    "react-dom": "18.2.0"
+  }
 }
