--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -33,6 +33,13 @@
       { "exceptAfterOverload": true, "exceptAfterSingleLine": true }
     ],
     "@typescript-eslint/no-non-null-assertion": "off",
+    "no-empty-function": "off",
+    "@typescript-eslint/no-empty-function": [
+      "error",
+      {
+        "allow": ["constructors"]
+      }
+    ],
     "prettier/prettier": "error"
   }
 }
