--- a/package.json
+++ b/package.json
@@ -15,8 +15,9 @@
     "hardhat": "npx hardhat",
     "compile": "npx hardhat compile",
     "help": "npx hardhat help",
-    "test": "npx hardhat test",
     "node": "npx hardhat node",
+    "clean": "npx hardhat clean",
+    "test:local": "npx hardhat test contracts/test/Plataforma.test.ts --network localhost",
     "deploy:local": "npx hardhat run scripts/deploy.ts --network localhost",
     "deploy:test": "npx hardhat run scripts/deploy.ts --network polygonMumbai",
     "deploy:main": "npx hardhat run scripts/deploy.ts --network polygon",
