--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "clean": "npx hardhat clean",
     "test:local": "npx hardhat test contracts/test/Plataforma.test.ts --network localhost",
     "deploy:local": "npx hardhat run scripts/deploy.ts --network localhost",
+    "deploy:local-filled": "npx hardhat run scripts/fill.ts --network localhost",
     "deploy:test": "npx hardhat run scripts/deploy.ts --network polygonMumbai",
     "deploy:main": "npx hardhat run scripts/deploy.ts --network polygon",
     "verify:test": "npx hardhat run scripts/verify.ts --network polygonMumbai",
