--- a/packages/hardhat/package.json
+++ b/packages/hardhat/package.json
@@ -20,6 +20,7 @@
     "@types/mocha": ">=9.1.0",
     "@types/node": ">=12.0.0",
     "chai": "^4.2.0",
+    "dotenv": "^16.0.3",
     "ethers": "^5.4.7",
     "hardhat": "^2.12.6",
     "hardhat-gas-reporter": "^1.0.8",
@@ -27,5 +28,9 @@
     "ts-node": ">=8.0.0",
     "typechain": "^8.1.0",
     "typescript": ">=4.5.0"
+  },
+  "dependencies": {
+    "@chainlink/contracts": "^0.6.0",
+    "@openzeppelin/contracts": "^4.8.1"
   }
 }
