--- a/packages/nextjs/package.json
+++ b/packages/nextjs/package.json
@@ -26,6 +26,12 @@
     "typescript": "4.9.4"
   },
   "devDependencies": {
-    "ethers": "^5.7.2"
+    "@typescript-eslint/eslint-plugin": "^5.49.0",
+    "@typescript-eslint/parser": "^5.49.0",
+    "eslint-config-prettier": "^8.6.0",
+    "eslint-import-resolver-typescript": "^3.5.3",
+    "eslint-plugin-prettier": "^4.2.1",
+    "ethers": "^5.7.2",
+    "prettier": "^2.8.3"
   }
 }
