--- a/packages/hardhat/package.json
+++ b/packages/hardhat/package.json
@@ -1,11 +1,18 @@
 {
-  "name": "hardhat",
+  "name": "@one-bit-swap/hardhat",
   "version": "1.0.0",
   "description": "Repositorio de código y herramientas para desarrollar los contratos involucrados en el proyecto One-Bit-Swap",
   "main": "index.js",
   "author": "L. Campero, E. Román, J. Sas",
   "license": "MIT",
   "private": true,
+  "scripts": {
+    "chain": "hardhat node",
+    "compile": "hardhat compile",
+    "deploy": "hardhat deploy",
+    "fill": "hardhat run scripts/fill.ts --network localhost",
+    "test": "hardhat test --network localhost"
+  },
   "devDependencies": {
     "@ethersproject/abi": "^5.4.7",
     "@ethersproject/providers": "^5.4.7",
