--- a/packages/hardhat/package.json
+++ b/packages/hardhat/package.json
@@ -7,6 +7,7 @@
   "license": "MIT",
   "private": true,
   "scripts": {
+    "clean": "hardhat clean",
     "chain": "hardhat node",
     "compile": "hardhat compile",
     "deploy": "hardhat deploy",
@@ -30,6 +31,7 @@
     "dotenv": "^16.0.3",
     "ethers": "^5.4.7",
     "hardhat": "^2.12.6",
+    "hardhat-abi-exporter": "^2.10.1",
     "hardhat-gas-reporter": "^1.0.8",
     "solidity-coverage": "^0.8.0",
     "ts-node": ">=8.0.0",
