--- a/packages/hardhat/package.json
+++ b/packages/hardhat/package.json
@@ -10,7 +10,7 @@
     "clean": "hardhat clean",
     "chain": "hardhat node",
     "compile": "hardhat compile",
-    "deploy": "hardhat deploy",
+    "deploy": "hardhat run scripts/deploy.ts",
     "fill": "hardhat run scripts/fill.ts --network localhost",
     "test": "hardhat test --network localhost"
   },
