--- a/packages/hardhat/package.json
+++ b/packages/hardhat/package.json
@@ -11,6 +11,7 @@
     "chain": "hardhat node",
     "compile": "hardhat compile",
     "deploy": "hardhat run scripts/deploy.ts",
+    "faucets": "hardhat run scripts/faucets.ts",
     "fill": "hardhat run scripts/fill.ts --network localhost",
     "test": "hardhat test --network localhost"
   },
