--- a/packages/nextjs/package.json
+++ b/packages/nextjs/package.json
@@ -30,6 +30,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "sass": "^1.57.1",
+    "sharp": "^0.32.1",
     "typescript": "4.9.4"
   },
   "devDependencies": {
